--- a/Breast_Cancer_NN.ipynb
+++ b/Breast_Cancer_NN.ipynb
@@ -2930,26 +2930,27 @@
         "print(prediction_label)\n",
         "\n",
         "if prediction_label==0:\n",
-        "  r'Malignant'\n",
+        "  print('Malignant')\n",
         "else:\n",
-        "    r'Benign'"
+        "    print('Benign')"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "jvwOO3N4P0oS",
-        "outputId": "abed8a47-2637-485b-dfdb-92f69b54a845"
+        "outputId": "20c686bb-ac2f-4f02-fcd8-490e6329c1d3"
       },
-      "execution_count": 86,
+      "execution_count": 91,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1/1 [==============================] - 0s 34ms/step\n",
+            "1/1 [==============================] - 0s 40ms/step\n",
             "[[0.10287281 0.8914075 ]]\n",
-            "1\n"
+            "1\n",
+            "Benign\n"
           ]
         },
         {
